_Source/force-app/main/default/objects/BI_IPOS__c/BI_IPOS__c.object-meta.xml
<CustomObject>
    <label>IPOS</label>
    <nameField>
        <displayFormat>IPOS-{000000}</displayFormat>
        <label>IPOS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPOS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>