_Source/force-app/main/default/objects/BI_IPOS__c/fields/BI_Country__c.field-meta.xml
<CustomField>
    <fullName>BI_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>