_Source/force-app/main/default/objects/BI_IPOS__c/fields/BI_IPOS_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_IPOS_Type__c</fullName>
    <label>IPOS Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEAI Over the Water</fullName>
            </value>
            <value>
                <fullName>EMEAI-EMEAI</fullName>
            </value>
            <value>
                <fullName>Pacific Over the Water</fullName>
            </value>
            <value>
                <fullName>Pacific-Pacific</fullName>
            </value>
            <value>
                <fullName>Latin</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>