_Source/force-app/main/default/objects/BI_IPOS__c/fields/BI_Potential_JV_Sales__c.field-meta.xml
<CustomField>
    <fullName>BI_Potential_JV_Sales__c</fullName>
    <label>Potential JV Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>