_Source/force-app/main/default/objects/BI_IPOS__c/fields/BI_Proposal_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposal_Request_Form__c</fullName>
    <label>Proposal Request Form</label>
    <referenceTo>BI_Proposal_Request_Form__c</referenceTo>
    <relationshipLabel>IPOS</relationshipLabel>
    <relationshipName>IPOS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>