_Source/force-app/main/default/objects/BI_IPOS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BI_Country__c</columns>
    <columns>BI_IPOS_Type__c</columns>
    <columns>BI_Potential_JV_Sales__c</columns>
    <columns>BI_Proposal_Request_Form__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>